--- a/window-shopper/Base.lproj/Main.storyboard
+++ b/window-shopper/Base.lproj/Main.storyboard
@@ -1,24 +1,83 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13156.6" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13137.5"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--MainVC-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="MainVC" customModule="window_shopper" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="YES" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="windowShopperBG" translatesAutoresizingMaskIntoConstraints="NO" id="cQF-YP-EkN">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="windowShopperIcon" translatesAutoresizingMaskIntoConstraints="NO" id="Cls-Lv-U6s">
+                                <rect key="frame" x="157.5" y="55" width="60" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="iBa-AO-4Rg"/>
+                                    <constraint firstAttribute="width" constant="60" id="mWQ-dW-1RT"/>
+                                </constraints>
+                            </imageView>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Item price" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Fq9-KM-nVP" customClass="CurrencyTxtField" customModule="window_shopper" customModuleProvider="target">
+                                <rect key="frame" x="25" y="215" width="325" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="fjQ-UL-WJi"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" keyboardType="decimalPad" enablesReturnKeyAutomatically="YES"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Your hourly wage" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="NEJ-zh-v8a" customClass="CurrencyTxtField" customModule="window_shopper" customModuleProvider="target">
+                                <rect key="frame" x="25" y="150" width="325" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="58l-UA-NXz"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
+                            </textField>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="NEJ-zh-v8a" firstAttribute="top" secondItem="Cls-Lv-U6s" secondAttribute="bottom" constant="35" id="0OI-64-Qvk"/>
+                            <constraint firstItem="cQF-YP-EkN" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="8s3-Wk-NlL"/>
+                            <constraint firstItem="cQF-YP-EkN" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="AQM-6a-x7x"/>
+                            <constraint firstItem="cQF-YP-EkN" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="BZq-Li-vGq"/>
+                            <constraint firstItem="Fq9-KM-nVP" firstAttribute="top" secondItem="NEJ-zh-v8a" secondAttribute="bottom" constant="25" id="Brl-Fi-Ddk"/>
+                            <constraint firstItem="cQF-YP-EkN" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="GKZ-h2-J1Z"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Fq9-KM-nVP" secondAttribute="trailing" constant="25" id="NGt-zl-cq2"/>
+                            <constraint firstItem="Fq9-KM-nVP" firstAttribute="leading" secondItem="NEJ-zh-v8a" secondAttribute="leading" id="OAX-Ww-ZHz"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="NEJ-zh-v8a" secondAttribute="trailing" constant="25" id="QDL-I6-aPA"/>
+                            <constraint firstItem="Fq9-KM-nVP" firstAttribute="trailing" secondItem="NEJ-zh-v8a" secondAttribute="trailing" id="VJD-Kk-gPJ"/>
+                            <constraint firstItem="Cls-Lv-U6s" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="WNy-OD-Cje"/>
+                            <constraint firstItem="NEJ-zh-v8a" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="25" id="eF8-uw-L8p"/>
+                            <constraint firstItem="Fq9-KM-nVP" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="25" id="huh-9Q-Spq"/>
+                            <constraint firstItem="Fq9-KM-nVP" firstAttribute="height" secondItem="NEJ-zh-v8a" secondAttribute="height" id="kqc-X9-Jl5"/>
+                            <constraint firstItem="Cls-Lv-U6s" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="35" id="lTq-P6-mYU"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="PriceTxt" destination="Fq9-KM-nVP" id="60i-km-8aw"/>
+                        <outlet property="wageTxt" destination="NEJ-zh-v8a" id="iBt-68-xqH"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="24.800000000000001" y="34.632683658170919"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="windowShopperBG" width="414" height="736"/>
+        <image name="windowShopperIcon" width="115" height="115"/>
+    </resources>
 </document>
